# trala-lala

./: LICENSE  README.md  trala-lala.cabal
app/: Main.hs
src/: TralaAlexWrapper.hs  TralaLexer.x  TralaLexerInternal.hs  TralaParser.y  TralaParserInternal.hs  TralaParsingCommon.hs
