name:                trala-lala
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tilgalas/trala-lala#readme
license:             MIT
license-file:        LICENSE
author:              Maciej Szwaja
maintainer:          tilgalas@gmail.com
copyright:           (c) 2017 Maciej Szwaja
category:            Code Generation
                   , Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TralaParser
                     , TralaLexer
                     , TralaParserInternal
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.1
                     , mtl >= 2.2.1
  default-language:    Haskell2010
  build-tools:         happy
                     , alex

executable trala-lala-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trala-lala
  default-language:    Haskell2010

test-suite trala-lala-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trala-lala
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tilgalas/trala-lala
